# Electronic-Helper

./: .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
assets/: ppe.desktop.in  ppe.qrc
assets/calculation/: calculation.css
assets/ltspice/: opamp_model1b.asc  power.asc  power_single.asc  power_single_noload.asc  regulator_zener.asc  regulator_zener_bjt.asc
cmake/: Packaging.cmake
docs/: AI_AGENT_RULES.md  CALCULATORS_REFACTOR_PLAN.md  DEV_DOCKER.md  REFACTOR_PLAN.md  RELEASE.md
include/pep/: app.hpp  command_router.hpp  ltspice_export.hpp  ltspice_import.hpp  ltspice_template.hpp  module.hpp  module_registry.hpp
include/pep/modules/: antenna_basic.hpp  antenna_basic_ui.hpp  project_design.hpp  psu_basic.hpp  psu_basic_ui.hpp  psu_symmetric.hpp  psu_symmetric_ui.hpp
include/pep/modules/antenna_basic/ui/: widget.hpp
include/pep/modules/project_design/ui/: widget.hpp
include/pep/modules/psu_basic/ui/: widget.hpp
include/pep/modules/psu_symmetric/ui/: widget.hpp
scripts/: generate_icons.py  generate_icons_macos.sh  package_linux.sh  package_macos.sh  package_windows.ps1  run.sh  run_gui.sh  sign_macos.sh  sign_windows.ps1  verify.sh
src/: main.cpp
src/cli/: command_router.cpp
src/core/: app.cpp  ltspice_import.cpp  module_registry.cpp
src/gui/: main.cpp
src/ltspice/: ltspice_export.cpp  ltspice_export_render.cpp  ltspice_export_render.hpp  ltspice_import.cpp  ltspice_template.cpp
src/modules/: README.md  antenna.cpp  power_supply.cpp  symmetric_supply.cpp
src/modules/antenna_basic/: module.cpp
src/modules/antenna_basic/model/: model.cpp  model.hpp
src/modules/antenna_basic/ui/: widget.cpp
src/modules/project_design/export/: asc_ops.cpp  asc_ops.hpp  export.cpp  export.hpp  export_component_order.cpp  export_component_order.hpp  export_render.cpp  export_render.hpp  export_topology.cpp  export_topology.hpp  export_value_builders.cpp  export_value_builders.hpp  template_loader.cpp  template_loader.hpp
src/modules/project_design/graph/: graph.cpp  graph.hpp
src/modules/project_design/model/: connection_ops.cpp  connection_ops.hpp  model.cpp  model.hpp
src/modules/project_design/ui/: active_block_view.cpp  active_block_view.hpp  canvas_layout.cpp  canvas_layout.hpp  canvas_scene.cpp  canvas_scene.hpp  connection_ui.cpp  connection_ui.hpp  enum_ui.cpp  enum_ui.hpp  export_actions.cpp  export_actions.hpp  export_dialog.cpp  export_dialog.hpp  form_sync.cpp  form_sync.hpp  widget.cpp  widget_actions.cpp  widget_actions.hpp  widget_bindings.cpp  widget_bindings.hpp
src/modules/psu_basic/: module.cpp
src/modules/psu_basic/export/: export.cpp  export.hpp  template_export.cpp  template_export.hpp
src/modules/psu_basic/model/: model.cpp  model.hpp
src/modules/psu_basic/ui/: schematic_widget.cpp  schematic_widget.hpp  waveform_widget.cpp  waveform_widget.hpp  widget.cpp
src/modules/psu_symmetric/: module.cpp
src/modules/psu_symmetric/model/: model.cpp  model.hpp
src/modules/psu_symmetric/ui/: widget.cpp
src/ui/calculation/: calculation_builders.cpp  calculation_builders.hpp  calculation_document.hpp  calculation_html_renderer.cpp  calculation_html_renderer.hpp  calculation_module_widget.cpp  calculation_module_widget.hpp  calculation_validation.cpp  calculation_validation.hpp  calculation_view.cpp  calculation_view.hpp
tests/: test_antenna_basic_widget.cpp  test_calculation_builders.cpp  test_calculation_html_renderer.cpp  test_calculation_pipeline.cpp  test_calculation_validation.cpp  test_ltspice_export.cpp  test_project_design_connection_ops.cpp  test_project_design_export.cpp  test_project_design_widget.cpp  test_psu_basic_model.cpp  test_registry.cpp
